Updated pathfinding nms handler for each version